test/compile_errors/err_no_alloc_owned_literal.w
//! expect-check-fail: owned string literal allocates here

@[no_alloc]
fn main:
    let _s = "owned"

